# orionbelt-semantic-layer

./: .dockerignore  .env.example  .env.template  .gitignore  404.html  AGENTS.md  CHANGELOG-versions.md  CHANGELOG.md  CLA.md  CLAUDE.md  Dockerfile  Dockerfile.flight  Dockerfile.flight.dockerignore  Dockerfile.ui  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  semantic-layer-spec.md  server.json  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml  docker-publish.yml  notebook.yml
api/endpoints/: index.html
api/mcp/: index.html
api/openapi/: index.html
api/overview/: index.html
comparison/: index.html
comparison/atscale/: index.html
comparison/cube/: index.html
comparison/dbt/: index.html
comparison/lookml/: index.html
comparison/malloy/: index.html
demo/dremio/: README.md  bootstrap.py  docker-compose.yml  run-demo.sh
docs/: drivers.md  index.md
docs/api/: endpoints.md  mcp.md  openapi.md  overview.md
docs/comparison/: atscale.md  cube.md  index.md  lookml.md
docs/examples/: multi-dialect.md  multi-fact.md  sales-model.md  tpcds.md
docs/getting-started/: development.md  docker.md  installation.md  quickstart.md
docs/guide/: authentication.md  cli.md  compilation.md  dialects.md  model-format.md  query-language.md  result-cache.md  semantic-ql.md
docs/reference/: python-api.md
docs/stylesheets/: extra.css
drivers/: ARCHITECTURE.md  index.html
drivers/ob-bigquery/: pyproject.toml
drivers/ob-clickhouse/: CLAUDE.md  README.md  pyproject.toml
drivers/ob-databricks/: CLAUDE.md  README.md  pyproject.toml
drivers/ob-dremio/: CLAUDE.md  README.md  pyproject.toml
drivers/ob-driver-core/: README.md  pyproject.toml
drivers/ob-duckdb/: CLAUDE.md  README.md  pyproject.toml
drivers/ob-flight-extension/: CLAUDE.md  README.md  docker-compose.example.yml  pyproject.toml
drivers/ob-postgres/: CLAUDE.md  README.md  pyproject.toml
drivers/ob-snowflake/: CLAUDE.md  README.md  (+1 more)
examples/: notebook_setup.py  orionbelt_1_commerce.yaml  query.yml  quickstart.ipynb  quickstart_colab.ipynb  sem-layer.obml.yml  tpch.obml.yml
gap-analysis-v1/: index.html
infra/: apply-cloud-armor.sh  cloud-armor-policy.json  lb-config.yaml
ontology/: spec.md
osi-obml/: obml_as_osi.yaml  osi-schema.json  osi_obml_converter.py  osi_obml_mapping_analysis.md  tpcds_osi.yaml
overrides/: sitemap.xml
schema/: obml-schema.json  query-schema.json
scripts/: build_demo_duckdb.py  deploy-docs.sh  release.sh
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py
(+272 files in other folders)
